Fixed alignemnt of submit button for contact form, so that it aligns with the rest of the form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,7 @@ h3, h4{
 .btn-color{
     color: #f8e238;
     background-color: rgba(108, 186, 31, 0.95);
+    margin-left: 15px;
 }
 
 .btn-color:hover {
